--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="col-sm-3">
                 <p>CSS - My Robot </p>
                 <img src="myrobot.PNG" class="img-responsive" style="width:100%" alt="Image">
-                <a href="file:///C:/Users/Sheryl%20Dreyer/Desktop/dummies/portfolio/chap06.html">- click on me</a>
+                <a href="chap06.html">- click on me</a>
             </div>
 
         </div>
