--- a/index.html
+++ b/index.html
@@ -9,17 +9,22 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <style>
-        /* Set black background color, white text and some padding */
+        /* Remove the navbar's default margin-bottom and rounded borders */
+        
+        .navbar {
+            margin-bottom: 0;
+            border-radius: 0;
+        }
+        /* Add a gray background color and some padding to the footer */
         
         footer {
-            background-color: #555;
-            color: white;
-            padding: 15px;
+            background-color: #f2f2f2;
+            padding: 25px;
         }
     </style>
 </head>
 
-<body style="background-color:blue">
+<body>
 
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
@@ -29,111 +34,71 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-                <a class="navbar-brand" href="#">Logo</a>
+                <a class="navbar-brand" href="#">Portfolio</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">Messages</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
-                <form class="navbar-form navbar-right" role="search">
-                    <div class="form-group input-group">
-                        <input type="text" class="form-control" placeholder="Search..">
-                        <span class="input-group-btn">
-            <button class="btn btn-default" type="button">
-              <span class="glyphicon glyphicon-search"></span>
-                        </button>
-                        </span>
-                    </div>
-                </form>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-user"></span> My Account</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <div class="container text-center">
-        <div class="row">
-            <div class="col-sm-3 well">
-                <div class="well">
-                    <p><a href="#">My Profile</a></p>
-                    <img src="sherylimage.jpg" class="img-circle" height="80" width="80" alt="picture of me">
-                </div>
-                <div class="well">
-                    <p><a href="#">work covered</a></p>
-                    <p>
-                        <span class="label label-danger">What is javascript?</span>
-                        <span class="label label-default">datatypee</span>
-                        <span class="label label-primary">arrays</span>
-                        <span class="label label-success">objects</span>
-                        <span class="label label-info">for loops</span>
-                        <span class="label label-warning">while loops</span>
-                        <span class="label label-danger">switch</span>
-                        <span class="label label-danger">functions</span>
-                    </p>
-                </div>
-                <div class="alert alert-success fade in">
-                    <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
-                    <p><strong>Ey!</strong></p>
-                    People are looking at your profile. Find out who.
-                </div>
-                <p><a href="#">Link</a></p>
-                <p><a href="#">Link</a></p>
-                <p><a href="#">Link</a></p>
-            </div>
-            <div class="col-sm-7">
-
-                <div class="row">
-                    <div class="col-sm-12">
-                        <div class="panel panel-default text-left">
-                            <div class="panel-body">
-                                <p contenteditable="true">Status: Feeling Blue</p>
-                                <button type="button" class="btn btn-default btn-sm">
-                <span class="glyphicon glyphicon-thumbs-up"></span> Like
-              </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-sm-3">
-                        <div class="well">
-                            <p><em><strong>Douglas the animated robot </strong></em></p>
-                            <img src="myrobot.PNG" class="img-circle" height="55" width="55" alt="ROBOT">
-                            <br><a href="chap06.html">click here</a>
-                        </div>
-                    </div>
-                    <div class="col-sm-9">
-                        <div class="well">
-                            <p><em><strong>Building an animated robot. </strong></em> HTML, CSS, and JavaScript are a great team. Each piece works with the other two to make great things happen in web browsers. In this chapter, we put all the pieces together
-                                to make Douglas the JavaScript Robot dance!</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-3">
-                        <div class="well">
-                            <p><em><strong>Javascript Pizzeria </strong></em></p>
-
-                            <br>
-                            <a href="chap14.html"><img src="pizza.jpg" class="img-circle" height="55" width="55" alt="Avatar"></a>
-                        </div>
-                    </div>
-                    <div class="col-sm-9">
-                        <div class="well">
-                            <p>When you need to make an either/or or yes/no decision, <em><strong>the if...else statement </strong></em>is your best friend. In this chapter, you learn how to use if...else statements to create and navigate choices in JavaScript
-                                programs.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
+    <div class="jumbotron">
+        <div class="container text-center">
+            <h1>My Portfolio</h1>
+            <p>Some text that represents "Me"...</p>
         </div>
     </div>
+
+    <div class="container-fluid bg-3 text-center">
+        <h3>Some of my Work</h3><br>
+        <div class="row">
+            <div class="col-sm-3">
+                <p>Some text..</p>
+                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+            </div>
+            <div class="col-sm-3">
+                <p>Some text..</p>
+                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+            </div>
+            <div class="col-sm-3">
+                <p>Some text..</p>
+                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+            </div>
+            <div class="col-sm-3">
+                <p>Some text..</p>
+                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+            </div>
+        </div>
+    </div><br>
+
+    <div class="container-fluid bg-3 text-center">
+        <div class="row">
+            <div class="col-sm-3">
+                <p>Some text..</p>
+                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+            </div>
+            <div class="col-sm-3">
+                <p>Some text..</p>
+                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+            </div>
+            <div class="col-sm-3">
+                <p>Some text..</p>
+                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+            </div>
+            <div class="col-sm-3">
+                <p>Some text..</p>
+                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+            </div>
+        </div>
+    </div><br><br>
 
     <footer class="container-fluid text-center">
         <p>Footer Text</p>
