--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
                                 <td> 11-15 Feb</td>
                                 <td>In Classroom Course.Done All Exercises. Done All Practises
                                 </td>
-                                <td> <a href="https://classroom.google.com/w/MTYxNDg5NTM1MTBa/t/MzA2MDI4NDE1OTJa">link to all my work in the classroom</a></td>
+                                <td> <a href="https://sherydreyer.github.io/javaOCA/">link to all my work in the classroom</a></td>
                                 <td>19 Feb</td>
                             </tr>
                             <tr>
                                 <td> 20-23 Feb</td>
                                 <td> Java Book</td>
-                                <td> </td>
+                                <td> <a href="https://classroom.google.com/c/MTYxNDg5NTM1MTBa/a/MzA2MDMxNTkyMDha">link to all my work in the classroom</a></td>
                                 <td> </td>
                             </tr>
                             <tr>
@@ -179,3 +179,4 @@
 </body>
 
 </html>
+https://classroom.google.com/c/MTYxNDg5NTM1MTBa/a/MzA2MDMxNTkyMDha/details
