--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
                                 <td> 11-15 Feb</td>
                                 <td>In Classroom Course.Done All Exercises. Done All Practises
                                 </td>
-                                <td> <a href="https://sherydreyer.github.io/javaOCA/">link to all my work in the classroom</a></td>
+                                <td> <a href="https://github.com/sherydreyer/javaOCA">shopping cart</a>
+                                    <a href="https://github.com/sherydreyer/JavaAdvancedTest">Java Advanced Test</a></td>
                                 <td>19 Feb</td>
                             </tr>
                             <tr>
